@@ -5,4 +5,5 @@
     <string id="202">Unable to find the stream</string>
     <string id="203">Schedule seems to be empty</string>
     <string id="204">Older shows</string>
+    <string id="205">Live</string>
 </strings>
