@@ -5,4 +5,5 @@
     <string id="202">Striimi aadressi leidmine nurjus</string>
     <string id="203">Hetkel pole kavas ühtegi ülekannet</string>
     <string id="204">Vanemad saated</string>
+    <string id="205">otse</string>
 </strings>
